--- a/src/style.css
+++ b/src/style.css
@@ -149,23 +149,22 @@ a{
 
 .skills span{
     
-    height: 30px;
-    margin-top: 10px;
+ display: inline-block;
 
-    flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    border: 0px;
-    border-radius: 10px;
-    box-shadow: 0 0px 1px rgba(0, 0, 0, 0.488);
-    background-color: white;
-    transform: border 0.3s ease;
-    
 
 }
 .myskills{
+  display: flex;
+ 
+  float: left;
+
+  
+}
+.myskills-span{
     padding: 10px;
-    background-color: whitesmoke;
+    background-color: #d6e6f1;
+    border-radius:10px ;
+    margin: 3px;
 }
 .profile-header{
     width: 100%;
